[tool.poetry]
name = "toeppo"
version = "0.1.0"
description = "Reinforcement learning on a multiplayer card game"
authors = ["Pieter Pel <contact@pieterpel.com>"]

[tool.poetry.dependencies]
python = "^3.6"
gym = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

